# riskmesh

./: .gitignore  404.html  CLAUDE.md  OpenParametric.md  README.ko.md  README.md  index.html
.github/: pull_request_template.md
.github/workflows/: contract-ci.yml  (+2 more)
assets/: index-6j2UZIJC.js  index-D414dai8.js  index-DNvuLVsW.js
contract/: .gitignore  Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
contract/programs/open_parametric/: Cargo.toml
contract/programs/open_parametric/src/: constants.rs  errors.rs  lib.rs  math.rs  state.rs
contract/programs/open_parametric/src/instructions/: accept_share.rs  accept_share_test.rs  activate_master.rs  activate_master_test.rs  activate_policy.rs  approve_settle_claim.rs  check_oracle.rs  confirm_master.rs  create_flight_policy_from_master.rs  create_master_policy.rs  create_master_policy_test.rs  create_policy.rs  create_policy_test.rs  expire_refund.rs  mod.rs  open_underwriting.rs  register_participant_wallets.rs  register_policyholder.rs  reject_share.rs  resolve_flight_delay.rs  settle_flight_claim.rs  settle_flight_claim_test.rs  settle_flight_no_claim.rs  settle_flight_no_claim_test.rs
docs/: CONTRACT_GUIDE.md  CONTRACT_GUIDE_EN.md  CONTRACT_TESTING_GUIDE_KO.md  FILE_STATE_LOGIC_FULL_KO.md  FRONTEND_TESTING_GUIDE_KO.md  MASTER_POLICY_REDESIGN_PLAN_KO.md  emotion-migration-handoff.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
reference/: OpenParametric_—_On_chain_Parametric_Insurance_Infrastructure_260222.html
(+178 files in other folders)
